# missingfcup

./: .gitignore  CHANGELOG.md  LICENSE  README.md  breast_cancer_logreg.joblib  demo_matrix.py  democollisions.py  missingfcup_use_case.ipynb  pyproject.toml  thesis-package-test.py
.github/workflows/: test.yml
examples/: barchart_count.ipynb  barchart_count.py  barchart_intersection.ipynb  barchart_rate.ipynb  barchart_rate.py  barchart_total.ipynb  barchart_total.py  barchart_venn.ipynb  barchart_venn.py  boxplot.ipynb  boxplot.py  dendrogram.ipynb  density.ipynb  density.py  heatmap.ipynb  heatmap.py  heatmap_biserial.ipynb  heatmap_biserial.py  heatmap_correlation.ipynb  heatmap_correlation.py  heatmap_predictive.ipynb  heatmap_predictive.py  heatmap_rate.ipynb  heatmap_rate.py  panel.ipynb  panel.py  parallel_coordinates.ipynb  parallel_coordinates.py  scatterplot.ipynb
missingfcup/: __init__.py  _version.py
missingfcup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
missingfcup/core/: MissingData.py  ViewMetadata.py  __init__.py  matrix.py  missingobject.py  ordering.py  preparation.py  validation.py
missingfcup/demo/: __init__.py  all_correlation_heatmap.py  barchart_demo.py  column_missing_rate_heatmap.py  correlation_heatmap.py  demo_collisions.py  demo_collisions_dataset.py  demo_groupby.py  demo_matrix.py  demo_orderby.py  demo_scatter.py  dendrogram_demo.py  heatmap_demo.py  missing_data_demo.py  new_demo.py  panel_demo.py  parallelCoordinates_demo.py  pattern_barchart_demo.py  scatterplot_demo.py  simple_demo.py  simple_demo_categorical.py  upsetplot_demo.py
missingfcup/display/: __init__.py  theme.py
missingfcup/examples/: barchart_intersection.py  barchart_overall_missingness.py  boxplot_missingness.py  column_missing_rate_heatmap.py  dendrogram.py  density_missingness.py  heatmap.py  missing_count_barchart.py  missing_data.py  missing_missing_heatmap.py  panel.py  parallel_coordinates.py  present_missing_heatmap.py  present_present_heatmap.py  scatterplot.py  value_missingness_heatmap.py
missingfcup/notebooks/breast_cancer/: missing_analysis.ipynb
missingfcup/notebooks/breast_cancer/data/: gen_multi.ipynb  mar_multi.csv  mnar_multi.csv
missingfcup/notebooks/contraceptive_method_choice/: missing_analysis.ipynb  overview.ipynb
missingfcup/notebooks/default_of_credit_card_clients/: missing_analysis.ipynb  overview.ipynb
missingfcup/notebooks/student_performance/: missing_analysis_uni.ipynb  overview.ipynb  overview_v2.ipynb
missingfcup/notebooks/titanic/: analysis_multi.ipynb  analysis_uni.ipynb  missing_analysis.ipynb
missingfcup/notebooks/titanic/data/: gen_uni.ipynb  (+3 more)
missingfcup/plots/: AllCorrelationHeatmap.py  ColumnMissingRateHeatmap.py  CorrelationHeatmap.py  Dendrogram.py  Heatmap.py  MissingCountBarChart.py  Panel.py  ParallelCoordinates.py  PatternBarChart.py  Plot.py  Scatterplot.py  UpSetPlot.py  __init__.py  barchart.py  heatmap.py  panel.py  plot.py
missingfcup/src/missingfcup/: __init__.py
missingfcup/viz/: __init__.py  barplot.py  dendrogam.py  missing_matrix.py  patterns.py
missingfcup_pkg/: __init__.py  matrix.py
notebooks/breast_cancer/: gen_multi.ipynb
notebooks/breast_cancer/data/: mar_multi.csv  mcar_multi.csv  mnar_multi.csv
notebooks/contraceptive_method/: gen_multi.ipynb
notebooks/contraceptive_method/data/: mar_multi.csv  mnar_multi.csv
notebooks/default_credit/: gen_multi.ipynb
notebooks/default_credit/data/: mar_multi.csv  mcar_multi.csv  mnar_multi.csv
notebooks/student_performance/: gen_multi.ipynb
notebooks/student_performance/data/: mar_multi.csv  mnar_multi.csv
notebooks/titanic/: gen_multi.ipynb  gen_uni.ipynb
notebooks/titanic/data/: mar_uni.csv  mcar_uni.csv  mnar_multi.csv  mnar_uni.csv
src/missingfcup/: __init__.py
src/missingfcup/core/: missing_data.py
src/missingfcup/plots/: __init__.py  _barchart_count.py  _barchart_intersection.py  _barchart_rate.py  _barchart_total.py  _barchart_venn.py  _boxplot.py  _dendrogram.py  _density.py  _heatmap.py  _heatmap_biserial.py  _heatmap_correlation.py  _heatmap_predictive.py  _heatmap_rate.py  _parallel_coordinates.py  _plot.py  _scatterplot.py  panel.py
tests/: __init__.py  test_missing_matrix.py  test_ordering.py  test_smoke.py  test_validation.py
use_cases/: titanic.ipynb  titanic_missingness_case_study.ipynb
(+37 files in other folders)
