[project]
name = "missingfcup"
version = "0.1.0"
description = "Python package to create visualizations that showcase missing values"
authors = [
    { name = "Matias Luna", email = "matiasortizluna.contacto@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0",
    "plotly>=5.20",
    "scipy>=1.10"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

keywords = [
    "missing-data",
    "visualization",
    "plotly",
    "data-science",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["missingfcup/src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
